# range-int

./: LICENSE  README.md  pyproject.toml
rangeint/: __init__.py  rangeint.py
tests/: test_rangeint.py
