[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rangeint"
version = "1.0.0"
description = "A clamped integer type with range-aware arithmetic, callbacks, and lerp utilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["range", "clamp", "integer", "lerp", "gamedev", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/kp-dev1/range-int"
Repository = "https://github.com/kp-dev1/range-int"
Issues = "https://github.com/kp-dev1/range-int/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rangeint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
